@@ -41,6 +41,7 @@ struct _MetaTabEntry
   int              inner_x, inner_y, inner_width, inner_height;
   guint            blank : 1;
   guint            minimized : 1;
+  guint            demands_attention : 1;
 };
 
 MetaTabPopup*   meta_ui_tab_popup_new          (const MetaTabEntry *entries,
